--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ng-apexcharts": "^1.2.1",
     "ng-chartist": "4.1.0",
     "ng-multiselect-dropdown": "^0.2.10",
+    "ng-payment-card": "^0.0.8",
     "ng2-charts": "^2.3.0",
     "ng2-completer": "^3.0.3",
     "ng2-dragula": "^2.1.1",
@@ -86,7 +87,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "^2.3.2",
+    "prettier": "2.8.5",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
